--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,6 +18,8 @@
         android:elevation="2dp"
         android:ems="10"
         android:hint="Email"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/PasswordRegister"
@@ -49,7 +51,9 @@
         android:ems="10"
         android:hint="Phone"
         android:inputType="number"
+        android:textColorHint="@color/black"
         android:padding="10dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/EmailRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -66,6 +70,8 @@
         android:elevation="2dp"
         android:ems="10"
         android:hint="Password"
+        android:textColorHint="@color/black"
+        android:textColor="@color/black"
         android:inputType="textPassword"
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/Continue"
@@ -83,6 +89,7 @@
         android:elevation="2dp"
         android:ems="10"
         android:hint="Name"
+        android:textColorHint="@color/black"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:textColor="@color/black"
@@ -98,7 +105,6 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="72dp"
         android:background="@drawable/custom_button"
-
         android:text="Continue"
         android:textAllCaps="false"
         android:textSize="18sp"
