--- a/app/src/main/res/layout/activity_detail_news.xml
+++ b/app/src/main/res/layout/activity_detail_news.xml
@@ -5,23 +5,26 @@
     style="bol"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TestActivity">
+    tools:context=".DetailNews">
 
     <TextView
-        android:id="@+id/tvName2"
+        android:id="@+id/tvAuthor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:text="TextView"
+        android:textColor="@color/black"
         android:textSize="23dp"
+        android:textStyle="italic|bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/txtHeading" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/txtHeading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="4dp"
         android:text="Beware of global economic risks, analysts warn Vietnam"
         android:textColor="@color/black"
@@ -33,7 +36,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -42,69 +45,68 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvName2" />
+        app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />
+
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="10dp"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/tvDate"
         app:srcCompat="@drawable/ic_launcher_background" />
 
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="65sp"
-        android:layout_marginTop="4dp"
-        android:background="#C0C0C0"
-        android:text="A container truck is seen at Cat Lai Terminal in Ho Chi Minh City in December 2021. Photo by VnExpress/Thanh Nguyen"
-        android:textSize="17dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+    <!--    <View-->
+<!--        android:id="@+id/view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="25dp"-->
+<!--        android:background="#C0C0C0"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tvContent"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginTop="4dp"
-        android:textSize="15sp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
         android:text="Trước khi buổi tập bắt đầu, HLV Park Hang-seo vui vẻ chụp ảnh cùng nhân viên sân.
 
 Buổi tập này không có Lương Xuân Trường và Vũ Văn Thanh. Hai cầu thủ này của HAGL được HLV Park cho ở lại khách sạn để tập thể lực.
 Trong lúc chờ cầu thủ khởi động, HLV Park gọi riêng trợ lý Nguyễn Anh Đức ra để chỉ bảo các việc cần làm.
 
 Anh Đức là nhân tố quan trọng của Việt Nam trên hành trình vô địch AFF Cup 2018, hiện thi đấu cho Long An ở giải hạng Nhất. Gần đây, anh được HLV Park đưa vào thành phần Ban huấn luyện để tạo nền móng cho sự nghiệp cầm quân sau này của cựu tiền đạo Bình Dương."
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:background="#C0C0C0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="224dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="12dp"
+        android:text="Delete"
+        app:layout_constraintStart_toEndOf="@+id/btnUpdate"
+        app:layout_constraintTop_toBottomOf="@+id/tvContent" />
 
+    <Button
+        android:id="@+id/btnUpdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="12dp"
+        android:text="Update"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvContent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
