--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -92,28 +92,20 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
-<!--            <com.google.android.material.bottomnavigation.BottomNavigationView-->
-<!--                android:id="@+id/bottomNavigationView"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginStart="0dp"-->
-<!--                android:layout_marginEnd="0dp"-->
-<!--                android:background="?android:attr/windowBackground"-->
-<!--                app:itemIconTint="@android:color/black"-->
-<!--                app:itemTextColor="@android:color/black"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintLeft_toLeftOf="parent"-->
-<!--                app:layout_constraintRight_toRightOf="parent"-->
-<!--                app:menu="@menu/bottom_nav" >-->
-
-<!--                <FrameLayout-->
-<!--                    android:id="@+id/fragmentContainerView"-->
-<!--                    android:name="androidx.navigation.fragment.NavHostFragment"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    app:defaultNavHost="true"-->
-<!--                    app:navGraph="@navigation/nav_graph" />-->
-<!--            </com.google.android.material.bottomnavigation.BottomNavigationView>-->
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigationView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="0dp"
+                android:background="?android:attr/windowBackground"
+                app:itemIconTint="@android:color/black"
+                app:itemTextColor="@android:color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:menu="@menu/nav_menu" >
+            </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
