--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -9,4 +9,8 @@
         android:id="@+id/settingsFragment"
         android:title="Setting"
         android:icon="@drawable/ic_outline_settings_24"/>
+    <item
+        android:id="@+id/bookMarkFragment"
+        android:title="BookMark"
+        android:icon="@drawable/ic_baseline_bookmark_border_24"/>
 </menu>
